# recordpool-dl

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  beatjunkies.bat  bpmsupreme.bat  djcity.bat  pyproject.toml  recordpool-dl.bat  recordpool-dl.sh  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: black.yaml  black.yml  github-actions-demo.yml  python.yml
src/: BPMSupreme.py  Bandcamp.py  Beatjunkies.py  DJCity.py  RecordPool.py  RecordPoolDownloader.py  colorprint.py  utils.py
